# project-solis

./: CMakeLists.txt
src/: main.cc
src/libs/freetype/: include.md
src/libs/stb_image/: stb_image.cc  stb_image.cmake  stb_image_resize.h  stb_image_write.h
src/solis-image/: s_algo.cc  s_algo.cu  s_algo.cuh  s_algo.h  s_image.cc  s_image.cmake  s_image.h  uchar.h
